--- a/src/frontend/Pages/style.scss
+++ b/src/frontend/Pages/style.scss
@@ -4,6 +4,7 @@
 @import './Login/style.scss';
 @import './Receive/style.scss';
 @import './Register/style.scss';
+@import './Pay/style.scss';
 
 
 .page {
