--- a/src/frontend/Pages/Login/style.scss
+++ b/src/frontend/Pages/Login/style.scss
@@ -1,106 +1,63 @@
 .login-page {
   min-height: 100vh;
-  .title-area {
-    color: $text-color-light;
-    * {
-      color: $text-color-light;
-    }
-    height: 55vh;
-    min-height: 450px;
-    h4 {
-      padding-top: 50px;
-      margin-top: calc(12.5vh - 75px);
-    }
-    .centered.subtitle {
-      margin-top: 50px;
-    }
 
-    #demoreq-button {
-      font-size: 20px;
-      padding-top: 15px;
-      padding-bottom: 15px;
-      padding-left: 30px;
-      padding-right: 30px;
-      transition: all $standard-time $standard-transition-curve;
-      border: 1px solid rgba($text-color-light, 0.001);
+  .info-area {
+    padding-top: 50px;
+    padding-left: 15vw;
+    padding-right: 15vw;
+    p.centered.title {
+      margin-top: 3.5vh;
+      margin-bottom: 2.5vh;
     }
-    #demoreq-button:hover {
-      transition: all $standard-time $standard-transition-curve;
-      border: 1px solid rgba($text-color-light, 0.75);
+    .login-card {
+      background-color: rgba($text-color-light, 0.9);
     }
+    .button {
+      margin-left: calc(25px + 15vw);
+      margin-right: calc(25px + 15vw);
+      transition: all $standard-time $standard-transition-curve;
+      box-shadow: 0 0 0 1px rgba($text-color-dark, 0.25);
 
-    .ilp-contact {
-      .button {
-        transition: all $standard-time $standard-transition-curve;
-        box-shadow: 0 0 0 1px rgba($text-color-light, 0.001);
-        opacity: 0.75;
-      }
-      .button:hover {
-        transition: all $standard-time $standard-transition-curve;
-        box-shadow: 0 0 0 1px rgba($text-color-light, 0.75);
-        opacity: 1;
-      }
+    }
+    .button:hover {
+      transition: all $standard-time $standard-transition-curve;
+      box-shadow: 0 0 0 1px rgba($text-color-dark, 0.75);
+      opacity: 1;
     }
   }
 
-  .info-area {
-    padding-left: 5vw;
-    padding-right: 5vw;
-
-    hr {
-      margin: 1.5em;
+  .login-background {
+    position: absolute;
+    overflow: hidden;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    max-width: 100%;
+    height: 150vh;
+    min-height: 900px;
+    z-index: -100;
+    background-color: $primary-color-dark;
+    .img-wrapper {
+      position: absolute;
+      object-fit: cover;
+      max-height: 100%;
+      max-width: 100%;
+      padding: 0px;
+      min-height: 100%;
+      min-width: 100%;
+      filter: brightness(75%);
     }
-
-    .product-section {
-      padding-bottom:16px;
-    }
-
-    .product-item-text, .member-item-text{
-      padding-left: 8px;
-      padding-right: 8px
-    }
-
-    .member-section {
-      .member-item {
-        margin-bottom: 16px;
-      }
-
-      .member-bio {
-        margin: 0;
-      }
-      img.member-img {
-        border-radius: 50%;
-      }
-      .member-item-text {
-        padding-top: 8px;
-      }
-
-      .button {
-        transition: all $standard-time $standard-transition-curve;
-        box-shadow: 0 0 0 1px rgba($text-color-dark, 0.5);
-        opacity: 0.5;
-      }
-      .button:hover {
-        transition: all $standard-time $standard-transition-curve;
-        box-shadow: 0 0 0 1px rgba($text-color-dark, 0.75);
-        opacity: 1;
-      }
-    }
-
-    .member-affiliate-section, .affiliate-section {
-      text-align: center;
-      img.member-affiliate-img {
-        max-width: 150px;
-      }
-      img.affiliate-img {
-        max-width: 200px;
-      }
-      img.member-affiliate-img, img.affiliate-img {
-        height: auto;
-        display: inline;
-        vertical-align: middle;
-        margin: 8px;
-      }
+    img {
+      position: absolute;
+      transition: all 0.5s linear;
+      object-fit: cover;
+      margin: 0px;
+      max-height: 100%;
+      max-width: 100%;
+      padding: 0px;
+      min-height: 100%;
+      min-width: 100%;
+      opacity: 0.5;
     }
   }
 }
